styles.css
h1{
    margin: 0;   
}

.header-inner {
    display: flex;
    align-items: center;
    justify-content: space-between; /* left, center, right */
    padding: 10px 20px;
}

.logo-area {
    display: flex;
    justify-content: center;
    flex: 1;
}

.logo{
    width: 110px;
    height: auto;
    display: block;
}

.nav {
    flex: 1;
}

.header-right {
    flex: 1;
    display: flex;
    justify-content: flex-end;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    background-color: white;
    color: black;
}

.site-header {
    background-color: white;
    border-bottom: 1px solid white;
}


.main-nav {
    display: flex;
}

.nav-link {
    text-decoration: none;
    color: black;
    font: open sans, sans-serif;
    font-size: 16px;
    padding: 6px 14px;
    border-radius: 4px;
}

.nav-link:hover {
   color: rgb(43, 43, 242);
}

.sign-in-btn {
    background-color: rgb(43, 43, 242);
    color: white;
    padding: 6px 14px;
    margin-left: 10px;
    border-radius: 6px;
    font-weight: bold;
}

.sign-in-btn:hover {
    background-color: darkblue;
    color: white;
}

.hero {
    position: relative;
    height: 500px;
    background-image: url(images/zillow-hero1.png);
    background-size: cover;
    background-position: center;
}

.hero-overlay {
    width: 100%;
    height: 100%;
    background: linear-gradient(rgba (0,0,0,0.55) rgba(0,0,0,0.75));
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero-content {
    text-align: left;
    color: white;
    max-width: 700px;
    padding: 20px;
}

.hero-title {
    font-size: 42px;
    font-weight: 700px;
    margin-top: -30px;
    margin-bottom: 30px;
}

.search-bar {
    display: flex;
    width: 100%;
    max-width: 600px;
    margin-top: -30px;
    margin: 0 auto;
    background: white;
    border-radius: 6px;
    overflow: hidden;
    border: 1px solid white;
}

.search-bar input {
    flex: 1;
    padding: 14px 20px;
    border: none;
    font-size: 16px;
    outline: none;
}

.search-btn {
    background: #0066ff;
    color: white;
    padding: 0 24px;
    font-size: 20px;
    cursor: pointer;
}

.search-btn:hover {
    background: #0050c7;
}

